# advent-2021-solutions

./: .gitignore  README
day1/python/: first.py  second.py
day1/rust/: Cargo.toml
day1/rust/src/first/: main.rs
day1/rust/src/second/: main.rs
day10/python/: first.py  second.py
day11/python/: first.py  second.py
day12/python/: first.py  second.py
day13/python/: first.py  second.py
day14/python/: first.py  second.py
day15/python/: first.py  second.py
day16/python/: first.py  second.py
day17/python/: first.py  second.py
day18/python/: first.py  second.py
day19/python/: first.py  second.py
day2/python/: first.py  second.py
day20/python/: first.py  second.py
day21/python/: first.py  second.py
day22/python/: first.py  second.py
day23/python/: first.py  second.py
day24/python/: first.py  second.py
day25/python/: first.py
day3/python/: first.py  second.py
day4/python/: first.py  second.py
day5/python/: first.py  second.py
day6/python/: first.py  second.py
day7/python/: first.py  second.py
day8/python/: first.py  second.py
day9/python/: first.py  second.py
