[package]
name = "advent-day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "advent-day1-first"
path = "src/first/main.rs"

[[bin]]
name = "advent-day1-second"
path = "src/second/main.rs"

